# fixie

./: CMakeLists.txt  LICENSE  README.md
ext/glfw/: CMakeLists.txt
ext/gtest/: CMakeLists.txt
extensions/: KHR_debug.txt
include/: fixie.h  fixie_gl_es.h  fixie_gl_es_ext.h  fixie_platform.h
include/fixie/: fixie.h  fixie_ext.h  fixie_gl_es.h  fixie_gl_es_ext.h  fixie_gl_types.h  fixie_platform.h
samples/: CMakeLists.txt  testbed.cpp
samples/render_to_texture/: CMakeLists.txt  render_to_texture.cpp
samples/sample_util/: CMakeLists.txt  lighting.cpp  lighting.hpp  material.cpp  material.hpp  obj_loader.cpp  obj_loader.hpp  random.cpp  random.hpp  tga_loader.cpp  tga_loader.hpp  transformations.cpp  transformations.hpp  vectors.hpp  vectors.inl
samples/simple/: CMakeLists.txt  simple.cpp
samples/simple_lighting/: CMakeLists.txt  simple_lighting.cpp
samples/simple_model/: CMakeLists.txt  gradient.tga  simple_model.cpp
samples/simple_texturing/: CMakeLists.txt  simple_texturing.cpp
samples/simple_triangle/: CMakeLists.txt  simple_triangle.cpp
src/: CMakeLists.txt  buffer.cpp  buffer.hpp  caps.cpp  caps.hpp  color.cpp  color.hpp  context.cpp  context.hpp  debug.hpp  exceptions.cpp  exceptions.hpp  fixed_point.cpp  fixed_point.hpp  fixie.cpp  function_loader.hpp  function_loader.inl  light.cpp  light.hpp  light_model.cpp  light_model.hpp  log.cpp  log.hpp  material.cpp  material.hpp  math_util.hpp  matrix.cpp  matrix.hpp  matrix_stack.cpp  matrix_stack.hpp  range.cpp  range.hpp  rectangle.cpp  rectangle.hpp  state.cpp  state.hpp  texture.cpp  texture.hpp  util.cpp  util.hpp  (+4 more)
src/desktop_gl_impl/: desktop_gl_buffer.cpp  desktop_gl_buffer.hpp  desktop_gl_context.cpp  desktop_gl_context.hpp  desktop_gl_functions.cpp  desktop_gl_functions.hpp  desktop_gl_shader.cpp  desktop_gl_shader.hpp  desktop_gl_shader_cache.cpp  desktop_gl_shader_cache.hpp  desktop_gl_texture.cpp  desktop_gl_texture.hpp
src/fixie/: buffer.cpp  buffer.hpp  caps.cpp  caps.hpp  color.cpp  color.hpp  context.cpp  context.hpp  debug.hpp  exceptions.cpp  exceptions.hpp  exceptions.inl  fixed_point.cpp  fixed_point.hpp  fixie.cpp  fixie_es.cpp  fixie_es_ext.cpp  fixie_ext.cpp  fixie_gl_es.cpp  fixie_gl_es_ext.cpp  function_loader.hpp  function_loader.inl  light.cpp  light.hpp  light_model.cpp  light_model.hpp  log.cpp  log.hpp  material.cpp  material.hpp  matrix.cpp  matrix.hpp  matrix_stack.cpp  matrix_stack.hpp  range.cpp  range.hpp  rectangle.cpp  state.cpp  state.hpp  texture.cpp  (+8 more)
src/fixie/desktop_gl_impl/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  desktop_gl_buffer.cpp  desktop_gl_buffer.hpp  desktop_gl_context.cpp  desktop_gl_context.hpp  desktop_gl_functions.cpp  desktop_gl_functions.hpp  desktop_gl_shader.cpp  desktop_gl_shader_cache.cpp  desktop_gl_shader_cache.hpp  desktop_gl_texture.cpp  desktop_gl_texture.hpp  gl_functions.cpp  shader.cpp  shader.hpp  shader_cache.cpp  shader_cache.hpp  shader_info.cpp  shader_info.hpp  texture.cpp  texture.hpp
src/fixie/null_impl/: context.hpp  null_buffer.cpp  null_buffer.hpp  null_context.cpp  null_texture.cpp  texture.hpp
src/fixie_lib/: buffer.cpp  buffer.hpp  caps.cpp  caps.hpp  clear_state.cpp  clear_state.hpp  clip_plane.cpp  clip_plane.hpp  color.cpp  color.hpp  color_buffer_state.cpp  color_buffer_state.hpp  context.cpp  context.hpp  depth_buffer_state.cpp  depth_buffer_state.hpp  depth_stencil_state.cpp  depth_stencil_state.hpp  enum_names.cpp  enum_names.hpp  exceptions.cpp  exceptions.hpp  fixed_point.cpp  fixed_point.hpp  fog_state.cpp  fog_state.hpp  framebuffer.cpp  framebuffer.hpp  function_loader.hpp  function_loader.inl  handle_manager.hpp  handle_manager.inl  hint_state.cpp  hint_state.hpp  light.cpp  light.hpp  light_model.cpp  light_model.hpp  lighting_state.cpp  lighting_state.hpp  (+54 more)
src/fixie_lib/desktop_gl_impl/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  exceptions.cpp  exceptions.hpp  framebuffer.cpp  framebuffer.hpp  gl_functions.cpp  gl_functions.hpp  gl_version.cpp  gl_version.hpp  renderbuffer.cpp  renderbuffer.hpp  shader.cpp  shader.hpp  shader_cache.cpp  shader_cache.hpp  shader_info.cpp  shader_info.hpp  texture.cpp  texture.hpp
src/fixie_lib/null_impl/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  framebuffer.cpp  framebuffer.hpp  renderbuffer.cpp  renderbuffer.hpp  texture.cpp  texture.hpp
src/null_impl/: null_buffer.cpp  null_buffer.hpp  null_context.cpp  null_context.hpp  null_texture.cpp  null_texture.hpp
test/: CMakeLists.txt  fixed_point_tests.cpp  matrix_tests.cpp  vector_tests.cpp
test/fixie/: CMakeLists.txt  context_tests.cpp
test/fixie_lib/: CMakeLists.txt  fixed_point_tests.cpp  matrix_tests.cpp  util_tests.cpp  vector_tests.cpp
